# spioonid

./: .gitignore  joonised.ipynb  main.ipynb  mudel.ipynb  pyproject.toml  readme.md
andmed/: spioonid.csv  spioonid_kunstlik.csv  spioonid_lisa.csv  söögiajad_õr5.csv
kaalud/: 10.csv  100.csv  20.csv  30.csv  40.csv  50.csv  60.csv  70.csv  80.csv  90.csv
paber/: bibliography.bib  spioonid-kasarmus.tex
